TED#30095 Enhanced Radar chart model/renderer/UI in several cases Refactor chart UI code to support customized series buttons